--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 colorama==0.4.6
 cssbeautifier==1.14.11
 Django==5.0
+django-braces==1.15.0
 djlint==1.34.1
 EditorConfig==0.12.3
 html-tag-names==0.1.2
