--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,27 @@
 asgiref==3.7.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cssbeautifier==1.14.11
 Django==5.0
 django-braces==1.15.0
+django-embed-video==1.4.9
 djlint==1.34.1
 EditorConfig==0.12.3
 html-tag-names==0.1.2
 html-void-elements==0.1.0
+idna==3.6
 jsbeautifier==1.14.11
 json5==0.9.14
 pathspec==0.12.1
 Pillow==10.1.0
 PyYAML==6.0.1
 regex==2023.12.25
+requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 tqdm==4.66.1
 typing_extensions==4.9.0
+urllib3==2.1.0
