--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ jsbeautifier==1.14.11
 json5==0.9.14
 pathspec==0.12.1
 Pillow==10.1.0
+pymemcache==4.0.0
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
