--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 cssbeautifier==1.14.11
 Django==5.0
 django-braces==1.15.0
+django-debug-toolbar==4.2.0
 django-embed-video==1.4.9
 djlint==1.34.1
 EditorConfig==0.12.3
