--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+async-timeout==4.0.3
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -19,6 +20,7 @@ pathspec==0.12.1
 Pillow==10.1.0
 pymemcache==4.0.0
 PyYAML==6.0.1
+redis==5.0.1
 regex==2023.12.25
 requests==2.31.0
 six==1.16.0
