--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 async-timeout==4.0.3
+attrs==23.2.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -9,6 +10,7 @@ Django==5.0
 django-braces==1.15.0
 django-debug-toolbar==4.2.0
 django-embed-video==1.4.9
+django-redisboard==8.4.0
 djlint==1.34.1
 EditorConfig==0.12.3
 html-tag-names==0.1.2
