--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-braces==1.15.0
 django-debug-toolbar==4.2.0
 django-embed-video==1.4.9
 django-redisboard==8.4.0
+djangorestframework==3.14.0
 djlint==1.34.1
 EditorConfig==0.12.3
 html-tag-names==0.1.2
@@ -21,6 +22,7 @@ json5==0.9.14
 pathspec==0.12.1
 Pillow==10.1.0
 pymemcache==4.0.0
+pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
 regex==2023.12.25
