--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.2.0
 certifi==2023.11.17
+channels==4.0.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
