--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
 certifi==2023.11.17
-channels==4.0.0
+cffi==1.16.0
+channels==3.0.5
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+constantly==23.10.4
+cryptography==41.0.7
 cssbeautifier==1.14.11
+daphne==3.0.2
 Django==5.0
 django-braces==1.15.0
 django-debug-toolbar==4.2.0
@@ -17,20 +23,30 @@ djlint==1.34.1
 EditorConfig==0.12.3
 html-tag-names==0.1.2
 html-void-elements==0.1.0
+hyperlink==21.0.0
 idna==3.6
+incremental==22.10.0
 jsbeautifier==1.14.11
 json5==0.9.14
 pathspec==0.12.1
 Pillow==10.1.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
 pymemcache==4.0.0
+pyOpenSSL==23.3.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
 regex==2023.12.25
 requests==2.31.0
+service-identity==24.1.0
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 tqdm==4.66.1
+Twisted==23.10.0
+txaio==23.1.1
 typing_extensions==4.9.0
 urllib3==2.1.0
+zope.interface==6.1
